fix spacing between publications
There was non-uniform and very expanded spacing between publication entries which I closed with this commit

--- a/subpage/subpage.css
+++ b/subpage/subpage.css
@@ -192,7 +192,7 @@ strong::before {
   margin-top: 20px;
 }
 #publication_content {
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 /*------------------------outside the lab-------------------------*/
